# rules_scala

./: .travis.yml  README.md  WORKSPACE  test_rules_scala.sh  test_rules_scala_with_latest_bazel.sh  test_run.sh
.circleci/: config.yml
.github/workflows/: continuous-integration-workflow.yml
java_stub_template/file/: BUILD.bazel  file.txt
jmh/: jmh.bzl
junit/: junit.bzl
plugin/src/main/resources/: toolbox.classpath
plugin/src/test/: BUILD
scala/: BUILD  plusone.bzl  providers.bzl  scala.bzl  scala_config_toolchain.bzl  scala_cross_version.bzl
scala/private/: common.bzl  rule_impls.bzl
scala/private/macros/: scala_repositories.bzl
scala/private/phases/: phase_compile.bzl
scala_proto/: scala_proto.bzl
scala_proto/private/: scala_proto_default_repositories.bzl
specs2/: specs2.bzl  specs2_junit.bzl
src/java/io/bazel/rulesscala/scalac/: CompileOptions.java  ScalacProcessor.java
src/java/io/bazel/rulesscala/specs2/: Specs2RunnerBuilder.scala
strip_resource_external_workspace/: WORKSPACE
strip_resource_external_workspace/should/strip/: BUILD.bazel
test/: BUILD
test/coverage_filename_encoding/: BUILD.bazel
test/toolchain/: BUILD  ScalaToolchainTest.scala
test/toolchains/: BUILD.bazel
test_expect_failure/dep_analyzer_modes/: A.scala  B.scala  C.scala
test_expect_failure/missing_direct_deps/: A.scala  BUILD
test_expect_failure/missing_direct_deps/no_missing_direct_deps/: A.scala  B.scala  BUILD  C.scala
test_expect_failure/plus_one_deps/: BUILD.bazel
twitter_scrooge/: twitter_scrooge.bzl
(+6 files in other folders)
